# SFMLInstaller

./: .gitattributes  CMakeLists.txt  FindSFML.cmake  README.md
src/: CMake.cpp  CMake.hpp  Decompress.cpp  Decompress.hpp  Installer.cpp  Installer.hpp  Introspection.hpp  Make.cpp  Make.hpp  NMake.cpp  NMake.hpp  SFMLInstaller.cpp  SFMLInstaller.hpp  System.hpp  System.inl  main.cpp
src/apple/: CMakeVersion.cpp  Introspection.cpp  System.cpp
src/linux/: CMakeVersion.cpp  Introspection.cpp  System.cpp
src/win32/: CMakeVersion.cpp  Introspection.cpp  System.cpp
